# recotem

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.recotem2  LICENSE  Makefile  ONE_PAGER.md  README.md  README2.md  SECURITY.md  compose-dev.yaml  compose-inference.yaml  compose-production.yaml  compose-test.yaml  compose.ci.yaml  compose.yaml  create-axios-schema.sh  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.example.yaml  docker-compose.yml  docker-compose.yml.tpl  manage.py  nginx-inference.conf  nginx.ci.conf  nginx.conf  package.json  proxy.dockerfile  pyproject.toml  release.py  schema.yml  vetur.config.js  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-image.yml  codeql.yml  docker.yml  nightly.yml  pre-commit.yml  publish.yml  recotem2-codeql.yml  recotem2-docker.yml  recotem2-test.yml  release.yml  run-test.yml  test.yml
assets/: make_demo_gif.py
backend/: .dockerignore  Dockerfile  backend.dockerfile  celery.dockerfile  manage.py  pyproject.toml  requirements.txt
backend/recotem/: .coveragerc  .dockerignore  celery.sh  clean_migration.sh  manage.py  pytest.ini  start.sh
backend/recotem/api/: serializers.py
backend/recotem/recotem/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/recotem/recotem/api/: admin.py  apps.py  authentication.py  consumers.py  exception_handler.py  exceptions.py  middleware.py  models.py  routing.py  serializers.py  task_function.py  tasks.py  throttles.py  urls.py  utils.py  views.py
backend/recotem/recotem/api/management/commands/: assign_owners.py  create_api_key.py  create_superuser.py  create_test_users.py  resign_models.py  wait_db.py
backend/recotem/recotem/api/migrations/: 0001_initial.py  0002_auto_20210605_1332.py  0002_project_owner.py  0002_schema_upgrade.py  0003_add_created_by_to_configs.py  0003_production_features.py  0004_fix_project_name_uniqueness.py  0005_fix_model_config_name_uniqueness.py  0006_parametertuningjob_status.py  0007_add_indexes_and_validators.py  0008_add_updated_at.py  0009_model_field_improvements.py  0010_jsonfield_migration.py
backend/recotem/recotem/api/models/: __init__.py  base_file_model.py
backend/recotem/recotem/api/serializer_utils/: __init__.py  data.py  data_detail.py  project.py  task.py  tuning_job.py
backend/recotem/recotem/api/serializers/: __init__.py  ab_test.py  api_key.py  auth.py  data.py  deployment.py  events.py  ping.py  project.py  retraining.py  task.py  trained_model.py  tuning_job.py  user.py
backend/recotem/recotem/api/services/: ab_testing_service.py  data_service.py  id_mapper_compat.py  model_service.py  pickle_signing.py  pickle_signing_core.py  project_service.py  schedule_service.py  training_service.py  tuning_service.py  user_service.py
backend/recotem/recotem/api/view_utils/: getme.py  project.py  tuning_job.py
backend/recotem/recotem/api/views/: __init__.py  ab_test.py  api_key.py  deployment.py  events.py  filemixin.py  mixins.py  model.py  pagination.py  project.py  retraining.py  tuning_job.py  user.py
backend/recotem/tests/: conftest.py  test_ab_test_views.py  test_ab_testing_service.py  test_access_control.py  test_api_key_project_scope.py  test_api_key_views.py  test_assign_owners_command.py  test_authentication.py  test_consumers.py  test_create_api_key_command.py  test_create_test_users_command.py  test_data_post.py  test_deployment_views.py  test_event_views.py  test_exception_handler.py  test_filemixin.py  test_jwt_cookie_auth.py  test_middleware.py  test_model_configuration.py  test_model_service.py  test_pagination.py  test_permissions.py  test_pickle_signing.py  test_project_name_uniqueness.py  test_project_service.py  test_resign_models.py  test_retraining_views.py  test_schedule_service.py  test_serializers.py  test_tasks.py  test_throttle.py  test_train.py  test_training_service.py  test_user_management.py  test_user_service.py  test_views.py
docs/: README.md  api-reference.md  getting-started.md  migration-v1.md  operations.md  plugin-authoring.md  quickstart.md  recipe-reference.md  security.md
docs/adr/: 0001-artifact-format-versioning.md  0002-module-boundary.md
docs/data-sources/: bigquery.md  csv.md  ga4.md  sql.md
docs/deployment/: aws.md  cron.md  docker-compose.md  docker.md  environment-variables.md  gcp.md  k8s.md  kubernetes.md  management-commands.md  separate-frontend.md  standalone-inference.md
docs/guide/: ab-testing.md  api-keys.md  data-management.md  deployment-slots.md  getting-started.md  inference.md  projects.md  retraining.md  training.md  tuning.md  user-management.md
docs/guides/: ab-testing.md  api-keys.md  inference-api.md  retraining.md  standalone-inference.md
docs/plans/: 2026-05-21-v1-api-overhaul.md
docs/specification/: api-reference.md  architecture.md  data-model.md  inference-service.md  security-design.md  task-system.md  websocket-protocol.md
docs/specs/: 2026-05-21-v1-api-overhaul-design.md
docs2/: operations.md  plugin-authoring.md  recipe-reference.md
envs/: .env.example  dev.env  dev.env.example  production.env  production.env.example
examples/plugins/echo-source/: README.md  pyproject.toml
examples/plugins/echo-source/src/recotem_echo/: __init__.py  source.py
frontend/: .env.example  eslint.config.js  frontend.dockerfile  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vue.config.js
inference/: Dockerfile  pyproject.toml
inference/inference/: auth.py  config.py  db.py  hot_swap.py  id_mapper_compat.py  impressions.py  main.py  model_loader.py  models.py  rate_limit.py  signing.py
inference/inference/routes/: health.py  predict.py  project.py
inference/tests/: __init__.py  conftest.py  test_auth.py  test_impressions.py  test_startup.py
recotem/: asgi.py  settings.py  urls.py  wsgi.py
src/: App.vue
tests/: conftest.py
(+436 files in other folders)
