[project]
name = "recotem"
version = "2.0.0"
description = "Recommender system builder"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.76",
    "celery>=5.4,<6",
    "Django>=5.1,<5.2",
    "django-celery-results>=2.5,<3",
    "django-cleanup>=6.0,<10",
    "django-cors-headers>=4.6,<5",
    "django-extensions>=3.2,<4",
    "django-storages>=1.14,<2",
    "django-filter>=24.3,<26",
    "djangorestframework>=3.15,<4",
    "djangorestframework-simplejwt>=5.3,<6",
    "dj-rest-auth>=7.0,<8",
    "pyjwt>=2.9,<3",
    "drf-spectacular>=0.28,<1",
    "optuna>=4.1,<5",
    "pandas>=2.2,<4",
    "irspack==0.4.0",
    "numpy>=2.1,<3",
    "scikit-learn>=1.6,<2",
    "whitenoise>=6.8,<7",
    "django-environ>=0.11,<1",
    "psycopg[binary]>=3.1,<4",
    "redis>=5.0,<8",
    "channels>=4.1,<5",
    "channels-redis>=4.2,<5",
    "daphne>=4.1,<5",
    "fastprogress>=1.0.0,<1.1",
    "python-json-logger>=3.2,<5",
    "django-celery-beat>=2.7,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=6.0,<8",
    "pytest-django>=4.9,<5",
    "pytest-celery>=1.0,<2",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "recotem.settings"
django_debug_mode = true
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"recotem/tests/*" = ["SIM115"]

[tool.ruff.lint.isort]
known-first-party = ["recotem"]
