[project]
name = "recotem-echo-source"
version = "0.1.0"
description = "Example third-party DataSource plugin for Recotem 2.0 — returns a static DataFrame."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Example Author", email = "author@example.com" }]

dependencies = [
    "recotem>=2.0,<3",
    "pandas>=2.2,<4",
]

# ── entry point declaration ────────────────────────────────────────────────────
# This is the key declaration that makes recotem discover EchoSource.
# Group: "recotem.datasources"
# Key:   the discriminator value used in recipe YAML (source.type: echo)
# Value: "<module>:<class>"
[project.entry-points."recotem.datasources"]
echo = "recotem_echo:EchoSource"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recotem_echo"]
